--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chess.js": "^1.4.0",
+    "cm-chessboard": "^8.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
