--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:watch": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.2.1"
   },
   "devDependencies": {
