--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,72 @@
+# Dipendenze
+node_modules/
 **/node_modules/
+package-lock.json
+**/package-lock.json
+
+# File di ambiente
+.env
+.env.local
+.env.*.local
 **/.env
+**/.env.local
+
+# File di sistema
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 **/.DS_Store
+
+# Build e output
+dist/
+build/
+**/dist/
+**/build/
+*.tsbuildinfo
+
+# Log
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Cache
+.cache/
+.parcel-cache/
+.npm/
+.eslintcache
+**/.cache/
+**/.parcel-cache/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# Testing
+coverage/
+.nyc_output/
+**/coverage/
+
+# Temporanei
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
