--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "chess.js": "^1.4.0",
     "express": "^5.2.1"
   },
   "devDependencies": {
