--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,23 @@
-# Dipendenze
-node_modules/
-**/node_modules/
-package-lock.json
-**/package-lock.json
-
-# File di ambiente
-.env
-.env.local
-.env.*.local
-**/.env
-**/.env.local
-
-# File di sistema
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-**/.DS_Store
-
-# Build e output
-dist/
-build/
-**/dist/
-**/build/
-*.tsbuildinfo
-
-# Log
+#logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
-# Cache
-.cache/
-.parcel-cache/
-.npm/
-.eslintcache
-**/.cache/
-**/.parcel-cache/
+node_modules
+dist
+dist-ssr
+*.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.project
-.classpath
-.settings/
-
-# Testing
-coverage/
-.nyc_output/
-**/coverage/
-
-# Temporanei
-*.tmp
-*.temp
-.tmp/
-.temp/
-
-# OS
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
