--- a/package.json
+++ b/package.json
@@ -2,25 +2,116 @@
   "name": "scacchi-hub-server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node index.ts",
-    "dev:watch": "nodemon --exec ts-node index.ts"
-  },
+  "main": "index.js",
   "dependencies": {
-    "chess.js": "^1.4.0",
-    "cors": "^2.8.5",
-    "express": "^5.2.1"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^24.10.2",
+    "accepts": "^2.0.0",
+    "acorn": "^8.15.0",
+    "acorn-walk": "^8.3.4",
+    "anymatch": "^3.1.3",
+    "arg": "^4.1.3",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "body-parser": "^2.2.1",
+    "brace-expansion": "^1.1.12",
+    "braces": "^3.0.3",
+    "bytes": "^3.1.2",
+    "call-bind-apply-helpers": "^1.0.2",
+    "call-bound": "^1.0.4",
+    "chokidar": "^3.6.0",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^1.0.1",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.2",
+    "cookie-signature": "^1.2.2",
+    "create-require": "^1.1.1",
+    "debug": "^4.4.3",
+    "depd": "^2.0.0",
+    "diff": "^4.0.2",
+    "dunder-proto": "^1.0.1",
+    "ee-first": "^1.1.1",
+    "encodeurl": "^2.0.0",
+    "es-define-property": "^1.0.1",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
+    "express": "^5.2.1",
+    "fill-range": "^7.1.1",
+    "finalhandler": "^2.1.1",
+    "forwarded": "^0.2.0",
+    "fresh": "^2.0.0",
+    "fsevents": "^2.3.3",
+    "function-bind": "^1.1.2",
+    "get-intrinsic": "^1.3.0",
+    "get-proto": "^1.0.1",
+    "glob-parent": "^5.1.2",
+    "gopd": "^1.2.0",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.1.0",
+    "hasown": "^2.0.2",
+    "http-errors": "^2.0.1",
+    "iconv-lite": "^0.7.0",
+    "ignore-by-default": "^1.0.1",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-promise": "^4.0.0",
+    "make-error": "^1.3.6",
+    "math-intrinsics": "^1.1.0",
+    "media-typer": "^1.1.0",
+    "merge-descriptors": "^2.0.0",
+    "mime-db": "^1.54.0",
+    "mime-types": "^3.0.2",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.3",
+    "negotiator": "^1.0.0",
     "nodemon": "^3.1.11",
+    "normalize-path": "^3.0.0",
+    "object-inspect": "^1.13.4",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^8.3.0",
+    "picomatch": "^2.3.1",
+    "proxy-addr": "^2.0.7",
+    "pstree.remy": "^1.1.8",
+    "qs": "^6.14.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^3.0.2",
+    "readdirp": "^3.6.0",
+    "router": "^2.2.0",
+    "safer-buffer": "^2.1.2",
+    "semver": "^7.7.3",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.1.0",
+    "side-channel-list": "^1.0.0",
+    "side-channel-map": "^1.0.1",
+    "side-channel-weakmap": "^1.0.2",
+    "simple-update-notifier": "^2.0.0",
+    "statuses": "^2.0.2",
+    "supports-color": "^5.5.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "touch": "^3.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "type-is": "^2.0.1",
+    "typescript": "^5.9.3",
+    "undefsafe": "^2.0.5",
+    "undici-types": "^7.16.0",
+    "unpipe": "^1.0.0",
+    "v8-compile-cache-lib": "^3.0.1",
+    "vary": "^1.1.2",
+    "wrappy": "^1.0.2",
+    "yn": "^3.1.1"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
