--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "chess.js": "^1.4.0",
     "express": "^5.2.1"
   },
