--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,9 +6,12 @@
     // "outDir": "./dist",
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
-    "module": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "target": "esnext",
-    "types": [],
+    "types": [
+      "vite/client"
+    ],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -36,7 +39,4 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
   },
-  "include": [
-    "vite.config.ts"
-  ]
 }
